# evidence-rag-platform

./: .dockerignore  .env.example  .gitignore  DESIGN.md  README.md  docker-compose.yml
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  demo_seed.py  main.py  public_fastapi_seed.py  reindex.py
apps/api/app/api/: auth.py  conversations.py  evaluations.py  knowledge_bases.py  retrieval.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/evaluation/: __init__.py  answer_batch.py  answer_review.py  confidence.py  formal.py  retrieval.py  review.py  review_sheet.py  runner.py
apps/api/app/models/: __init__.py  knowledge.py  user.py
apps/api/app/schemas/: __init__.py  auth.py  chat.py  knowledge.py
apps/api/app/services/: auth.py  bm25.py  chunking.py  deepseek.py  document_parsing.py  document_processing.py  embedding.py  local_hash_embedding.py  model_usage.py  reranker.py  retrieval.py  task_queue.py  vector_store.py
apps/api/migrations/: env.py
apps/api/tests/: test_answer_batch.py  test_answer_review.py  test_auth.py  test_confidence_calibration.py  test_deepseek_grounding.py  test_demo_seed.py  test_document_parsing.py  test_document_processing.py  test_embedding.py  test_evaluation_runner.py  test_formal_evaluation.py  test_grounded_chat.py  test_health.py  test_knowledge_bases.py  test_model_usage.py  test_models.py  test_provider_errors.py  test_public_fastapi_seed.py  test_reindex.py  test_reranker.py  test_retrieval.py  test_retrieval_evaluation.py  test_vector_store.py
(+72 files in other folders)
