[project]
name = "evidence-rag-api"
version = "0.1.0"
description = "API for the Evidence RAG Platform"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14,<2.0",
    "arq>=0.26,<1.0",
    "fastapi>=0.115,<1.0",
    "openai>=1.0,<3.0",
    "pypdf>=5.0,<7.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "qdrant-client>=1.16,<1.17",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
